--- a/css/style.css
+++ b/css/style.css
@@ -558,9 +558,18 @@ label {
 	header{
 		width: 450px;
 	}
-	.team-img{
-		width: 450px;
+	#team {
+		padding: 20px 0;
 	}
+	#team img {
+		max-width: 400px;
+	}
+	
+	#team .team-img {
+		display: inline-block;
+		position: relative;
+	}
+	
 	.intro {
 		width: 450px;
 		background-color: #a08c8cde;
